# fast-ui-smartcontract

./: Cargo.toml  README.md
neardev/: dev-account  dev-account.env
src/: lib.rs
